--- a/public/p/cryptography-a-simpler-explanation-on-keys/index.html
+++ b/public/p/cryptography-a-simpler-explanation-on-keys/index.html
@@ -141,8 +141,8 @@ Command 1 #This is a comment Command 2 #Another comment Command 3 #And another o
 
 </code></pre></div><p><figure 
 	>
-	<a href="/C:%5cUsers%5cnatas%5cBlog%5ccyber-blog%5cassets%5cimg%5cTomtom.jpg" >
-		<img src="/C:%5cUsers%5cnatas%5cBlog%5ccyber-blog%5cassets%5cimg%5cTomtom.jpg"
+	<a href="/static/Tomtom.jpg" >
+		<img src="/static/Tomtom.jpg"
 			
 			
 			
