--- a/public/about/index.html
+++ b/public/about/index.html
@@ -77,7 +77,7 @@
                 
                     <li>
                         <a 
-                            href=''
+                            href='mailto:natasha.dedich@gmail.com'
                             target="_blank"
                             title="Email"
                         >
