Made first official post, added more images

--- a/public/404.html
+++ b/public/404.html
@@ -69,7 +69,7 @@
                 
                     <li>
                         <a 
-                            href=''
+                            href='mailto:natasha.dedich@gmail.com'
                             target="_blank"
                             title="Email"
                         >
