--- a/public/search/index.html
+++ b/public/search/index.html
@@ -3,15 +3,15 @@
     <head><meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content=''><title>Search</title>
 
-<link rel='canonical' href='https://natashad.netlify.app/search/'>
+<link rel='canonical' href='https://natashad.me/search/'>
 
 <link rel="stylesheet" href="/scss/style.min.css"><meta property='og:title' content='Search'>
 <meta property='og:description' content=''>
-<meta property='og:url' content='https://natashad.netlify.app/search/'>
+<meta property='og:url' content='https://natashad.me/search/'>
 <meta property='og:site_name' content='Natasha Dedich'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="Search">
-<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://natashad.netlify.app/search/index.json"><link rel="preload" href="https://natashad.netlify.app/search/index.json" as="fetch" crossorigin="anonymous">
+<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://natashad.me/search/index.json"><link rel="preload" href="https://natashad.me/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
     <script>
@@ -195,7 +195,7 @@
     </ol>
 </aside>
 <main class="main full-width">
-<form action="https://natashad.netlify.app/search/" class="search-form"data-json="https://natashad.netlify.app/search/index.json">
+<form action="https://natashad.me/search/" class="search-form"data-json="https://natashad.me/search/index.json">
     <p>
         <label>Search</label>
         <input name="keyword" placeholder="Type something..." />
