--- a/public/about-us/index.html
+++ b/public/about-us/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>https://natashad.netlify.app/about/</title><link rel="canonical" href="https://natashad.netlify.app/about/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://natashad.netlify.app/about/" /></head></html>
+<!DOCTYPE html><html><head><title>https://natashad.me/about/</title><link rel="canonical" href="https://natashad.me/about/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://natashad.me/about/" /></head></html>
